# AoE-Archiver

./: Cargo.toml  build.rs  config.toml
.claude/: settings.local.json
assets/: aoe-archive.manifest
assets/aoe1/: supported_languages.txt
assets/aoe2/: achievements.json  configs.app.ini  configs.user.ini  supported_languages.txt
launch/: build.rs
src/: config.rs  ctx.rs  goldberg.rs  lib.rs  steam.rs  ui.rs  utils.rs
src/aoe/: mod.rs
src/aoe/aoe1/: mod.rs
src/aoe/aoe2/: companion.rs  launcher.rs
ui/: main.slint
