[workspace]
members = ["common", "launch"]

[package]
name = "aoe-archive"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
common = {path = "./common"}
aes-gcm = "0.11.0-rc.2"
rust-ini = "0.21.3"
winresource = "0.1.28"

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
common.workspace = true
dirs = "6"
fs2 = "0.4"
fs_extra = "1.3.0"
generic-array = "1.3.5"
slint = { version = "1", default-features = false, features = ["std", "backend-winit", "renderer-skia", "accessibility", "compat-1-2"] }
reqwest = { version = "0.12", features = ["default-tls", "blocking", "json"] }
rfd = "0.15.4"
rust-ini.workspace = true
serde = "1.0.228"
serde_json = "1"
sevenz-rust2 = "0.19"
strum = { version = "0.26", features = ["derive"] }
toml = { version = "0.9", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
typenum = "1.19.0"
winreg = "0.55"
zip = "5.1.1"

flate2 = "1"
tar = "0.4"
parking_lot = "0.12.5"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]


[profile.release-lto]
inherits = "release"
strip = true
lto = true

[build-dependencies]
slint-build = "1"
winresource.workspace = true
